--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -356,8 +356,8 @@
   "menu": {
     "message": "Menü"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Beachten Sie, dass nicht alle genannten Einträge Tracker sind, d.h. nicht alle sammeln persönliche Daten."
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "Beachten Sie, dass nicht alle genannten Aktivitäten Tracker sind, d.h. nicht alle sammeln persönliche Daten."
   },
   "miscellaneous": {
     "message": "Sonstiges",
@@ -395,12 +395,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "Noch keine Website-Ausnahmen hinzugefügt"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Anzahl der Tracker mit blockierten Netzwerkanfragen."
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Anzahl der Tracker mit entfernten Cookies oder Fingerabdrücken."
   },
   "observed_activities": {
     "message": "Beobachtete Aktivitäten"
