--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -356,8 +356,8 @@
   "menu": {
     "message": "Menu"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "Mind that not all listed activities are trackers, that is not all of them collect personal data."
   },
   "miscellaneous": {
     "message": "Miscellaneous",
@@ -395,12 +395,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "No websites exceptions added yet"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Number of trackers with blocked network requests."
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Number of trackers with removed cookies or fingerprints."
   },
   "observed_activities": {
     "message": "Observed activities"
