--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -356,8 +356,8 @@
   "menu": {
     "message": "Menu"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Les entités répertoriées ne sont pas toutes des trackers ; elles ne collectent pas toutes des données personnelles."
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "Gardez à l'esprit que les activités répertoriées ne sont pas toutes des trackers ; elles ne collectent pas toutes des données personnelles."
   },
   "miscellaneous": {
     "message": "Divers",
@@ -395,12 +395,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "Aucune exception de site web ajoutée pour l'instant"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Nombre de trackers avec des requêtes réseau bloquées."
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Nombre de mouchards avec des empreintes ou des cookies supprimés."
   },
   "observed_activities": {
     "message": "Activités observées"
