--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -356,8 +356,8 @@
   "menu": {
     "message": "メニュー"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "すべての事業者がトラッカーではないこと、すなわち、すべての事業者が個人情報を収集するわけではないことにご留意ください。"
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "すべてのリストされた活動がトラッカーではないこと、すなわち、すべての活動が個人情報を収集するわけではないことにご留意ください。."
   },
   "miscellaneous": {
     "message": "さまざまな",
@@ -395,12 +395,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "ウェブサイトの例外はまだ追加されていません"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "ネットワークリクエストがブロックされたトラッカーの数。"
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Cookieまたはフィンガープリントが削除されたトラッカーの数。"
   },
   "observed_activities": {
     "message": "観察済みのアクティビティ"
