--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -356,8 +356,8 @@
   "menu": {
     "message": "메뉴"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "열거된 모든 엔터티가 트래커는 아니며 모든 엔터티가 개인 데이터를 수집하는 것은 아닙니다."
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "열거된 모든 활동이 트래커는 아니며, 열거된 모든 활동이 개인 데이터를 수집하는 것은 아닙니다."
   },
   "miscellaneous": {
     "message": "기타",
@@ -395,12 +395,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "아직 추가된 웹사이트 예외 없음"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "네트워크 요청이 차단된 트래커의 수."
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "쿠키 및 지문이 제거된 트래커의 수."
   },
   "observed_activities": {
     "message": "관찰된 활동"
