--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -356,8 +356,8 @@
   "menu": {
     "message": "Menu"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Należy pamiętać, że nie wszystkie wymienione podmioty są trackerami, czyli nie wszystkie gromadzą dane osobowe"
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "Należy pamiętać, że nie wszystkie wymienione aktywności są trackerami, czyli nie wszystkie gromadzą dane osobowe."
   },
   "miscellaneous": {
     "message": "Różne",
@@ -395,12 +395,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "Nie dodano jeszcze żadnych wyjątków dla tej witryny"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Liczba trackerów z zablokowanymi żądaniami sieciowymi"
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Liczba trackerów z usuniętymi plikami cookie lub odciskami palców."
   },
   "observed_activities": {
     "message": "Obserwowane aktywności"
