--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -356,8 +356,8 @@
   "menu": {
     "message": "Меню"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Учитывайте, что не все перечисленные элементы —трекеры, т. е. не все из них собирают персональные данные."
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "Учитывайте, что не все перечисленные действия являются трекерами, т. е. не все из них собирают персональные данные."
   },
   "miscellaneous": {
     "message": "Разное",
@@ -395,12 +395,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "Сайтов, добавленных в исключения, пока нет"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Количество трекеров с заблокированными сетевыми запросами."
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "Количество трекеров с удаленными файлами cookie или цифровыми отпечатками устройств."
   },
   "observed_activities": {
     "message": "Отслеживаемые действия"
