--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -356,8 +356,8 @@
   "menu": {
     "message": "選單"
   },
-  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "請注意，並非所有列出的實體都是追蹤器，並非所有實體都收集個人資料"
+  "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
+    "message": "請注意，並非所有列出的工具都是追蹤器，並非所有工具都會收集個人資料。."
   },
   "miscellaneous": {
     "message": "各種各樣的",
@@ -395,12 +395,6 @@
   },
   "no_websites_exceptions_added_yet": {
     "message": "尚未新增網站例外"
-  },
-  "number_of_trackers_with_blocked_network_requests_": {
-    "message": "網路請求被攔截的追蹤器數量。"
-  },
-  "number_of_trackers_with_removed_cookies_or_fingerprints_": {
-    "message": "已刪除 cookie 或指紋的追蹤器數量。"
   },
   "observed_activities": {
     "message": "已觀察的活動"
