--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -56,6 +56,9 @@
     "message": "Anúncios adultos",
     "description": "Tracker category name"
   },
+  "advanced": {
+    "message": "Avançado"
+  },
   "advertising": {
     "message": "Anúncio",
     "description": "Tracker category name"
@@ -65,6 +68,9 @@
   },
   "allow_ghostery_in_private_windows": {
     "message": "Permitir o Ghostery em janelas privadas"
+  },
+  "allow_trusted_scriptlets": {
+    "message": "Permitir scriptlets confiáveis"
   },
   "always": {
     "message": "Sempre"
@@ -152,9 +158,15 @@
   "create_account": {
     "message": "Criar conta"
   },
+  "create_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
+    "message": "Crie regras de bloqueio de anúncios para personalizar sua experiência com o Ghostery."
+  },
   "current_protection_status_for_@_0__": {
     "message": "Status de proteção atual para $${0}:",
     "description": "Current protection status for a tracker"
+  },
+  "custom_filters": {
+    "message": "Filtros personalizados"
   },
   "customer_interaction": {
     "message": "Interação com o cliente",
@@ -289,15 +301,6 @@
   "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
     "message": "O Ghostery Tracker &amp; Ad Blocker está nomeando os rastreadores presentes nos sites que você visita. Você está navegando na Web sem proteção."
   },
-  "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "O Ghostery será pausado neste site. Você pode mudar isso a qualquer momento nas configurações do Ghostery para impedir que rastreadores e anúncios rastreiem você na web."
-  },
-  "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "O Ghostery será pausado neste site por 1 dia."
-  },
-  "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "O Ghostery será pausado neste site por 1 hora."
-  },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "O Ghostery mostrará quantos rastreadores foram bloqueados em uma página. Clicar no ícone Ghostery revela informações mais detalhadas."
   },
@@ -343,6 +346,9 @@
   },
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "Saiba mais sobre os desafios do YouTube em relação aos bloqueadores de anúncios"
+  },
+  "learn_more_on_supported_syntax": {
+    "message": "Saiba mais sobre a sintaxe suportada"
   },
   "load_more": {
     "message": "Carregar mais"
@@ -549,6 +555,15 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Agradecemos seu apoio na luta do Ghostery por uma web onde a privacidade é um direito humano básico!"
+  },
+  "this_site_will_always_be_trusted__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
+    "message": "Este site sempre será confiável. Você pode mudar isso a qualquer momento nas configurações do Ghostery para impedir que rastreadores e anúncios rastreiem você na web"
+  },
+  "this_site_will_be_trusted_for_1_day": {
+    "message": "Este site será confiável por 1 dia"
+  },
+  "this_site_will_be_trusted_for_1_hour": {
+    "message": "Este site será confiável por 1 hora"
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "Para ajustar a proteção de privacidade, confie em um site:"
