--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -56,6 +56,9 @@
     "message": "Publicités réservées aux publics adultes",
     "description": "Tracker category name"
   },
+  "advanced": {
+    "message": "Avancé"
+  },
   "advertising": {
     "message": "Publicité",
     "description": "Tracker category name"
@@ -65,6 +68,9 @@
   },
   "allow_ghostery_in_private_windows": {
     "message": "Autorise Ghostery dans les fenêtres privées"
+  },
+  "allow_trusted_scriptlets": {
+    "message": "Autoriser les scriptlets de confiance"
   },
   "always": {
     "message": "Toujours"
@@ -152,9 +158,15 @@
   "create_account": {
     "message": "Créer un compte"
   },
+  "create_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
+    "message": "Créez vos règles de blocage des publicités pour personnaliser votre expérience Ghostery."
+  },
   "current_protection_status_for_@_0__": {
     "message": "Statut de protection actuel pour $${0} :",
     "description": "Current protection status for a tracker"
+  },
+  "custom_filters": {
+    "message": "Filtres personnalisés"
   },
   "customer_interaction": {
     "message": "Interaction avec les clients",
@@ -289,15 +301,6 @@
   "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery bloqueur de traqueurs et publicités nomme uniquement les traqueurs présents sur les sites web que vous visitez. Vous naviguez sur le web sans protection."
   },
-  "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery sera mis en pause sur ce site. Vous pouvez modifier cette option à tout moment dans les paramètres de Ghostery pour empêcher les trackers et les publicités de vous suivre sur le Web."
-  },
-  "ghostery_will_be_paused_on_this_site_for_1_day": {
-    "message": "Ghostery sera mis en pause sur ce site pour 1 jour."
-  },
-  "ghostery_will_be_paused_on_this_site_for_1_hour": {
-    "message": "Ghostery sera mis en pause sur ce site pour 1 heure."
-  },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery affichera le nombre de trackers bloqués sur une page. Vous pouvez obtenir des informations détaillées en cliquant sur l'icône Ghostery."
   },
@@ -343,6 +346,9 @@
   },
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "En savoir plus sur les défis de YouTube face aux bloqueurs de publicité."
+  },
+  "learn_more_on_supported_syntax": {
+    "message": "En savoir plus sur la syntaxe prise en charge"
   },
   "load_more": {
     "message": "Charger plus"
@@ -549,6 +555,15 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Merci de soutenir la lutte de Ghostery pour un Web où la vie privée est un droit humain fondamental !"
+  },
+  "this_site_will_always_be_trusted__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
+    "message": "Ce site sera toujours de confiance. Vous pouvez modifier cette option à tout moment dans les paramètres de Ghostery pour empêcher les trackers et les publicités de vous suivre sur le Web"
+  },
+  "this_site_will_be_trusted_for_1_day": {
+    "message": "Ce site sera fiable pendant 1 jour"
+  },
+  "this_site_will_be_trusted_for_1_hour": {
+    "message": "Ce site sera approuvé pendant 1 heure"
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "Pour ajuster la protection de la vie privée :"
